--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,7 @@ db:
 web:
   build: .
   command: bash run.sh
-  environment:
-    - CLOUDINARY_URL=URL
+  env_file: .env
   volumes:
     - .:/workspace
   ports:
